--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .new-task-wrapper{
@@ -134,7 +134,7 @@ button:hover {
 }
 
 .tasklist-in {
-    width: 226px
+    width: 226px;
 }
 
 .delete img {
@@ -149,18 +149,18 @@ button:hover {
 
 /* Completed */
 .main-completed-tasks .tasklist-item {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .tasklist-in {
-    display: none
+    display: none;
 }
 
 .tasklist-items-edit .tasklist-in {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .tasklist-items-edit .tasklist-item {
