--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 /* Basic Style */
 .body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
 
 .head {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 
 .head-img {
-    width: 100%;
+  width: 100%;
 }
 
 .head .head-info {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 
   .head { 
     text-align: center;
@@ -29,128 +29,127 @@
 }
 
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
 
-.task,
-.tasklist-item {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
+.tasklist-item,
+.task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
 
 .new-task-wrapper {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
 }
 
 .tasklist {
-    margin: 0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 
 .tasklist-items {
-    list-style: none;
+  list-style:none;
 }
 
 .task,
 .tasklist-check,
-.button {
-    outline: none;
+button {
+  outline:none;
 }
 
-.button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+button {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 
-.button:hover {
-    color: #3a3A3a;
+button:hover {
+  color: #3a3a3a;
 }
 
 /* Heading */
 .main-head {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
 
 .task {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #ddd;
-    background: #fff;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
 
 .task:focus {
-    color: #333;
+  color: #333;
 }
 
 .new-task-input {
-    width: 318px;
+  width: 318px;
 }
 
 /* Task list */
 .tasklist-items {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .tasklist-items > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .tasklist-check {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 .tasklist-item {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
 
 .tasklist-in {
-    width: 226px;
+  width: 226px;
 }
 
 .delete img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 
 .delete img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .main-completed-tasks .tasklist-item {
-    text-decoration: line-through;
-    color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
